--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div id="moduleInfo">
 					<h1 id="moduleName">Error: Invalid Link.</h1>
 					<h2 id="moduleOwner"></h2>
-					<button id="donateButton" disabled="true" onclick="redirect()">Donate</button>
+					<button id="donateButton" disabled="true" onclick="redirect()" class="">Donate</button>
 				</div>
 			</div>
 		</div>
