Import style.css and main.js

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Redirecting...</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<script type="text/javascript" src="main.js"></script>
 		<script type="text/javascript" src="redirections.js"></script>
-		<script type="text/javascript">
-			window.location.href = data[document.location.search.match("redirect=(.+)")[1].toLocaleLowerCase()];
-		</script>
 	</head>
 	<body>
 		<div id="container">
