--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				<img id="moduleIcon" src="https://i.imgur.com/QxcTM0H.png" />
 				<div id="moduleInfo">
 					<h1 id="moduleName">Error: Invalid Link.</h1>
-					<h2 id="moduleOwner"></h2>
+					<h2 id="moduleOwner">&nbsp;</h2>
 					<button id="donateButton" disabled="true" onclick="redirect()" class="">Donate</button>
 				</div>
 			</div>
