--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="icon" type="image/png" href="https://i.imgur.com/sC88LlH.png" />
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script type="text/javascript" src="redirections.js"></script>
+		<script type="text/javascript" src="main.js"></script>
 	</head>
 	<body>
-		<div id="container">
-			<div id="mainBox">
-				<img id="moduleIcon" src="https://i.imgur.com/QxcTM0H.png" />
-				<div id="moduleInfo">
-					<h1 id="moduleName">Error: Invalid Link.</h1>
-					<h2 id="moduleOwner">&nbsp;</h2>
-					<button id="donateButton" disabled="true" onclick="redirect()" class="">Donate</button>
-				</div>
-			</div>
+		<div id="moduleInfo">
+			<img id="moduleIcon" src="https://i.imgur.com/M22ygpZ.png" />
+			<span id="moduleName" class="yellow"></span><br>
+			<span id="moduleOwner">Owned by <span id="owner"></span></span><br>
+			<span id="cooldownText" class="big-green">You will be redirected in <span id="cooldown">8</span> seconds.</span>
 		</div>
-
-		<script type="text/javascript" src="main.js"></script>
+		<span id="footer">Powered by the <a href="https://atelier801.com/topic?f=5&t=691642&p=40#m788" target="_blank"><span class="mt-blue">Module Team</span></a>.</span>
 	</body>
 </html>
