--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 			<img id="moduleIcon" src="https://i.imgur.com/M22ygpZ.png" />
 			<span id="moduleName" class="yellow"></span><br>
 			<span id="moduleOwner">Owned by <span id="owner"></span></span><br>
-			<span id="cooldownText" class="big-green">You will be redirected in <span id="cooldown">8</span> seconds.</span>
+			<span id="cooldownText" class="hidden big-green">You will be redirected in <span id="cooldown">8</span> seconds.</span>
+			<button id="redirectButton" class="hidden btn">Donate!</button>
 		</div>
 		<span id="footer">Powered by the <a href="https://atelier801.com/topic?f=5&t=691642&p=40#m788" target="_blank"><span class="mt-blue">Module Team</span></a>.</span>
 	</body>
