--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" type="image/png" href="https://i.imgur.com/sC88LlH.png" />
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script type="text/javascript" src="redirections.js"></script>
