--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	<body>
 		<div id="moduleInfo">
 			<img id="moduleIcon" src="https://i.imgur.com/M22ygpZ.png" />
-			<span id="moduleName" class="yellow"></span><br>
-			<span id="moduleOwner">Owned by <span id="owner"></span></span><br>
-			<span id="cooldownText" class="hidden big-green">You will be redirected in <span id="cooldown">8</span> seconds.</span>
+			<span id="moduleName" class="big yellow"></span><br>
+			<span id="moduleOwner" class="small">Owned by <span id="owner"></span></span><br>
+			<span id="cooldownText" class="hidden medium green">You will be redirected in <span id="cooldown">8</span> seconds.</span>
 			<button id="redirectButton" class="hidden btn">Donate!</button>
 		</div>
-		<span id="footer">Powered by the <a href="https://atelier801.com/topic?f=5&t=691642&p=40#m788" target="_blank"><span class="mt-blue">Module Team</span></a>.</span>
+		<span id="footer">Powered by the <a href="https://atelier801.com/topic?f=5&t=691642&p=40#m788" target="_blank"><span class="turquoise">Module Team</span></a>.</span>
 	</body>
 </html>
