add break line before action

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div id="moduleInfo">
 			<img id="moduleIcon" src="https://i.imgur.com/M22ygpZ.png" />
 			<span id="moduleName" class="big yellow"></span><br>
-			<span id="moduleOwner" class="small">Owned by <span id="owner"></span></span><br>
+			<span id="moduleOwner" class="small">Owned by <span id="owner"></span></span><br><br>
 			<span id="cooldownText" class="hidden medium green">You will be redirected in <span id="cooldown">8</span> seconds.</span>
 			<button id="redirectButton" class="hidden btn">Donate!</button>
 		</div>
