Improve UI of index page

--- a/index.html
+++ b/index.html
@@ -21,13 +21,9 @@
 		
 		<div id="modules" class="hidden">
 			<input type="search" id="moduleSearch">
-			<table id="moduleList">
-				<tr>
-					<th>Module</th>
-					<th>Owner</th>
-					<th>Host</th>
-				</tr>
-			</table>
+			<div id="moduleList">
+
+			</div>
 		</div>
 
 		<div id="moduleInfo" class="hidden">
