several fixes and improvements

--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
 		<script type="text/javascript" src="main.js"></script>
 	</head>
 	<body>
-		
 		<div id="modules" class="hidden">
 			<input type="search" id="moduleSearch">
-			<div id="moduleList">
-
-			</div>
+			<div id="moduleList"></div>
 		</div>
 
 		<div id="moduleInfo" class="hidden">
